# TAVA

./: pyproject.toml  train_dummy.py
metrics/: loss.py  metrics.py
outputs/experiments/deeplabv3plus_combined_bce_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/deeplabv3plus_combined_focal_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/deeplabv3plus_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/deeplabv3plus_focal_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/segformer_combined_bce_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/segformer_combined_focal_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/segformer_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/segformer_focal_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/swinunet_combined_bce_focal_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/swinunet_combined_focal_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/swinunet_dice_loss/: best_metrics.csv  metrics.csv  test_metrics.csv
outputs/experiments/swinunet_focal_loss/: best_metrics.csv  (+2 more)
preprocessing/: dataloader.py  pipeline.py
src/: config.py  pipeline.py  test.py  train.py
src/models/: deeplabv3plus.py  segformer.py  swin_unet.py  unet.py
train/: auxiliar_functions.py  train_dummy.py
utils/: visualize_augmentations.py
(+12 files in other folders)
