[project]
name = "proyect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "torch",
    "torchvision",
    "openpyxl",
    "scikit-learn",
    "pandas>=3.0.1",
    "segmentation-models-pytorch",
    "transformers>=4.40.0",
    "albumentations>=1.3.0",
    "matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["preprocessing*"]
